fixes on mobile

--- a/src/styles/content/components/forms.scss
+++ b/src/styles/content/components/forms.scss
@@ -56,8 +56,9 @@
 
   &__svg {
     opacity: 0;
-    width: 100%;
-    height: 100%;
+    width: getRem(20px);
+    height: getRem(20px);
+    flex: none;
     // transition: $transition;
   }
 }
